--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,16 +54,6 @@ textarea {
     resize: vertical;
 }
 
-/* ==========================================================================
-   Browse Happy prompt
-   ========================================================================== */
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
 
 /* ==========================================================================
    Author's custom styles
@@ -71,25 +61,16 @@ textarea {
 
 body {
     font-family: "Open Sans", sans-serif;
-}
-
-.bg {
-    height: 420px;
-    background: url("../img/moodboard.jpg") no-repeat top center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-header {
     text-align: center;
-    margin-top: 60px;
     padding-bottom: 60px;
 }
 
-header a {
-    color: rgba(0,0,0,0.8);
+header {
+    margin-top: 60px;
+}
+
+a {
+    color: #222;
     text-decoration: none;
 }
 
@@ -121,7 +102,7 @@ header a {
 }
 
 .description p {
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .description a {
@@ -129,7 +110,7 @@ header a {
 }
 
 .menu {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .menu ul {
