Adiciona post Larica Total

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,5 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/bulma.min.css">
-<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/inocente.css">
 <link href="https://fonts.googleapis.com/css?family=B612+Mono|Open+Sans" rel="stylesheet">
