--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,8 @@
   <div id="nav-bar" class="navbar-menu">
 
       <div class="navbar-end">
-          <a class="navbar-item" href="/sobre"><strong>Sobre mim</strong></a>
+          <a class="navbar-item" href="/sobre">Sobre mim</a>
         <a class="navbar-item is-light" href="https://www.linkedin.com/in/lucasinocente/">Linkedin</a>
-        <a class="navbar-item is-light" href="https://medium.com/@lucasinocente/">Medium</a>
         <a class="navbar-item is-light" href="https://github.com/lucasinocente">Github</a>
       </div>
 
