--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,9 @@
 
     <section class="section">
       <div class="container container-page-content">
-        {{ page.content }}
+          <div class="content is-medium">
+            {{ page.content }}
+          </div>
       </div>
     </section>
 
