--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
               {{ page.subtitle }}
           </h2>
           <h3 class="subtitle">
-              Criado em: {{ page.date | date: "%b %d, %Y" }}
+              Postado em: {{ page.date | date: "%d/%m/%Y" }}
           </h3>
         </div>
       </div>
