--- a/assets/css/inocente.css
+++ b/assets/css/inocente.css
@@ -32,3 +32,12 @@ h1.title  {
   width: 100%;
   height: 100%;
 }
+
+.content img {
+  display: block;
+  margin: 10px auto;
+}
+
+.full-image {
+  width: 100%;
+}
