--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,10 @@
 <script src="{{site.baseurl}}/assets/js/script.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138522491-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138522491-1');
+</script>
