--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,10 +13,10 @@
             Lucas Inocente
           </h1>
           <h2 class="subtitle">
-            Developer Team Lead @ ilegra
+            Developer Team Lead / Agilista @ ilegra
           </h2>
           <h3 class="subtitle">
-              Comunicação, simplicidade, feedback, coragem e respeito.
+              <strong>Comunicação, simplicidade, feedback, coragem e respeito.</strong>
           </h3>
         </div>
       </div>
