--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html class="has-navbar-fixed-top">
   {% include head.html %}
@@ -10,34 +9,16 @@
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            Lucas Inocente
+            Posts marcados com a categoria {{ page.tag }}
           </h1>
-          <h2 class="subtitle">
-            Developer Team Lead / Agilista @ ilegra
-          </h2>
-          <h3 class="subtitle">
-              <strong>Comunicação, simplicidade, feedback, coragem e respeito.</strong>
-          </h3>
         </div>
       </div>
     </section>
 
     <section class="section">
         <div class="container">
-          <h3 class="title">Posts</h3>
-        </div>
-        <br>
-        <div class="container categories-list">
-          {% for category in site.categories %}
-            <a class="button is-medium" href="{{ category[0] | downcase | url_escape | strip | replace: ' ', '-' }}">
-              <strong>{{ category[0] }}</strong>
-            </a>
-          {% endfor %}
-        </div>
-        <br>
-        <div class="container">
           <div class="columns is-multiline">
-            {% for post in site.posts %}
+            {% for post in site.categories[page.tag] %}
               <div class="column is-half">
                 <div class="card" data-url="{{ post.url }}">
                   <div class="card-content">
