--- a/assets/css/inocente.css
+++ b/assets/css/inocente.css
@@ -9,7 +9,7 @@ h1.title  {
 }
 
 .container-page-content {
-  max-width: 700px;
+  max-width: 760px;
   font-size: 20px;
 }
 
@@ -47,4 +47,8 @@ h1.title  {
 
 .categories-list .button {
   margin-bottom: 10px;
+}
+
+.container-page-content p {
+  margin: 30px 0px !important;
 }
