Adiciona scripts do 5minutos.de

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,3 +8,6 @@
 
   gtag('config', 'UA-138522491-1');
 </script>
+
+<link rel="stylesheet" href="https://5minutos.de/embed/style.css">
+<script src="https://5minutos.de/embed/script.js"></script>
