--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,7 @@
     </section>
 
     <section class="section">
+      <div id="shapes"></div>
       <div class="container container-page-content">
         {{ content }}
       </div>
