--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,6 +27,7 @@
     {% endif %}
 
     <section class="section">
+      <div id="shapes"></div>
       <div class="likes">
         <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
       </div>
