--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,3 +4,4 @@
 <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/bulma.min.css">
 <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/inocente.css">
 <link href="https://fonts.googleapis.com/css?family=B612+Mono|Open+Sans" rel="stylesheet">
+<script src="https://unpkg.com/zdog@1/dist/zdog.dist.min.js"></script>
