--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
             Lucas Inocente
           </h1>
           <h2 class="subtitle">
-            Developer Team Lead / Agilista @ ilegra
+            Desenvolvedor Frond-End / Agilista @ ilegra
           </h2>
           <h3 class="subtitle">
               <strong>Comunicação, simplicidade, feedback, coragem e respeito.</strong>
@@ -21,8 +21,9 @@
         </div>
       </div>
     </section>
-
+    <div id="shapes" class="shapes-home"></div>
     <section class="section">
+        <div id="shapes"></div>
         <div class="container">
           <h3 class="title">Posts</h3>
         </div>
