Create feature for show just one like with little content

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,16 +28,18 @@
 
     <section class="section">
       <div id="shapes"></div>
-      <div class="likes">
-        <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
-      </div>
-      <div class="container container-page-content">
-          <div class="content is-medium">
-            {{ page.content }}
-          </div>
-          <div class="likes">
-            <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
-          </div>
+      {% if page.single-like != true %}
+        <div class="likes">
+          <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
+        </div>
+      {% endif %}
+      <div class="container container-page-content {{ page.container-class }}">
+        <div class="content is-medium">
+          {{ page.content }}
+        </div>
+        <div class="likes">
+          <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
+        </div>
       </div>
     </section>
 
