--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@
           {{ page.content }}
         </div>
         <div class="likes">
-          <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
+          <simple-like></simple-like>
         </div>
       </div>
     </section>
