--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@
       <div id="shapes"></div>
       {% if page.single-like != true %}
         <div class="likes">
-          <iframe src="https://simple-like.appspot.com/like/?url={{ site.url }}{{ page.url }}" width="78" height="78" frameBorder="0"></iframe>
+          <simple-like></simple-like>
         </div>
       {% endif %}
       <div class="container container-page-content {{ page.container-class }}">
