Adiciona script para like em posts
Usa a ferramenta https://github.com/lucasinocente/simple-like :)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,8 @@
   gtag('config', 'UA-138522491-1');
 </script>
 
+<script src="https://simple-like-oss.firebaseapp.com/direflowBundle.js"></script>
+
 <script>
 
 const renderShapes = (element) => {
