--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
             Lucas Inocente
           </h1>
           <h2 class="subtitle">
-            Desenvolvedor Frond-End / Agilista @ ilegra
+            Desenvolvedor Frond-End / Agilista @ APOIA.se
           </h2>
           <h3 class="subtitle">
               <strong>Comunicação, simplicidade, feedback, coragem e respeito.</strong>
