--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:wght@200&display=swap');
 
 html,
 body {
@@ -18,15 +19,37 @@ a {
 
 h1 {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 55px;
+}
+
+h1, h2 {
+  margin: 21px 0px;
 }
 
 p {
+  font-size: 21px;
   font-weight: 400;
+  font-family: 'Open-sans', sans-serif;
 }
 
 p a {
   background-color: #FFD550;
   padding: 2px 8px;
-  border-radius: 6px;
+  border-radius: 5px;
+}
+
+.container {
+  max-width: 1597px;
+  margin: 0 auto;
+  padding: 13px;
+}
+
+.inner-container {
+  max-width: 610px;
+}
+
+@media (max-width: 610px) {
+  h1 {
+    font-size: 34px;
+  }
 }
